--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,8 @@ navbar:
   left:
     - text: "Home"
       href: index.html
+    - text: "Theory"
+      href: theory.html
     - text: "Life insurance"
       menu:
         - text: "Stochastic Processes in life-insurance (StokLiv)"
